--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-The git OpenSees souce code repository.
-This contains all revisions to OpenSees source code since Version 2.3.2.
+The git OpenSees source code repository.
+This repository contains all revisions to OpenSees source code since Version 2.3.2.
 
 Older revisions of the code are available upon request.
 
