Typo fixes for EXAMPLES/
Found via `codespell -q 3 -I ../opensees-word-whitelist.txt --skip="./OTHER"

--- a/EXAMPLES/DatastarExamples/README
+++ b/EXAMPLES/DatastarExamples/README
@@ -16,4 +16,4 @@ The examples in this directory can be run interactivily or or as batch jobs.
 
       llsubmit submit1
 
-for further infomation of how to run files on datastar, i suggest you read the on-line documentation.
+For further information of how to run files on datastar, I suggest you read the online documentation.
