--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Older revisions of the code are available upon request.
 
 If you plan on collaborating or even using OpenSees as your base code it is highly recommended that
 you FORK this repo to your own account and work on it there. We will not allow anybody to write to
-this repo. Only PULL requests will be considered. To fork the reop click on the FORK at the top of this page.
+this repo. Only PULL requests will be considered. To fork the repo click on the FORK at the top of this page.
 
 For a brief outline on forking topic we suggest:
 https://www.atlassian.com/git/tutorials/comparing-workflows/forking-workflow
